--- a/docker/services/frontend/html/service-data.html
+++ b/docker/services/frontend/html/service-data.html
@@ -278,12 +278,12 @@
             <p>
                 Der Data Service ist das <strong>zentrale Daten-Gateway</strong> des KI Trading Model Systems.
                 Er fungiert als einziger Vermittler zwischen externen Datenquellen und allen internen Services
-                (NHITS, TCN, HMM, RAG, LLM) und stellt eine einheitliche Schnittstelle fur Marktdaten bereit.
+                (NHITS, TCN, HMM, RAG, LLM) und stellt eine einheitliche Schnittstelle für Marktdaten bereit.
             </p>
             <p>
                 Der Service implementiert eine <strong>Multi-Source Fallback-Hierarchie</strong>:
-                TwelveData (primar) → EasyInsight (1. Fallback) → Yahoo Finance (2. Fallback).
-                Zusatzlich bietet er Symbol-Management, Indicator-Berechnungen und Trading-Strategien.
+                TwelveData (primär) → EasyInsight (1. Fallback) → Yahoo Finance (2. Fallback).
+                Zusätzlich bietet er Symbol-Management, Indicator-Berechnungen und Trading-Strategien.
             </p>
         </div>
 
@@ -294,7 +294,7 @@
             <div class="feature-grid">
                 <div class="feature-item">
                     <h4>&#128279; Symbol-Management</h4>
-                    <p>Verwaltung der zu uberwachenden Trading-Symbole mit Metadaten wie Exchange, Intervall und Status.</p>
+                    <p>Verwaltung der zu überwachenden Trading-Symbole mit Metadaten wie Exchange, Intervall und Status.</p>
                 </div>
                 <div class="feature-item">
                     <h4>&#128640; EasyInsight Integration</h4>
@@ -317,13 +317,13 @@
                     <p>Berechnung von Indikatoren wie SMA, EMA, RSI, MACD, Bollinger Bands über Twelve Data.</p>
                 </div>
                 <div class="feature-item">
-                    <p>Gateway fur RAG: Economic Calendar, Sentiment, On-Chain, Orderbook, Macro und mehr.</p>
+                    <p>Gateway für RAG: Economic Calendar, Sentiment, On-Chain, Orderbook, Macro und mehr.</p>
                 </div>
             </div>
 
             <div class="info-box">
-                <strong>Architektur:</strong> Der Data Service ist das einzige Gateway fur externe Daten.
-                Alle anderen Services (NHITS, TCN, RAG, LLM) greifen ausschliesslich uber diesen Service auf Marktdaten zu.
+                <strong>Architektur:</strong> Der Data Service ist das einzige Gateway für externe Daten.
+                Alle anderen Services (NHITS, TCN, RAG, LLM) greifen ausschließlich über diesen Service auf Marktdaten zu.
             </div>
         </div>
 
@@ -607,7 +607,7 @@
         <div class="content-card">
             <h2>&#127760; External Data Sources (RAG Gateway)</h2>
             <p>
-                Gateway fur externe Datenquellen, die vom RAG Service fur Trading Intelligence verwendet werden.
+                Gateway für externe Datenquellen, die vom RAG Service für Trading Intelligence verwendet werden.
             </p>
 
             <div class="feature-grid">
