--- a/docker/services/frontend/html/service-tcn.html
+++ b/docker/services/frontend/html/service-tcn.html
@@ -903,7 +903,7 @@
             <table class="endpoint-table">
                 <tr><th>Endpoint</th><th>Methode</th><th>Beschreibung</th></tr>
                 <tr><td><code>/api/v1/crt/session</code></td><td>GET</td><td>Aktuelle Session-Informationen (EST Zeit, H4 Candle)</td></tr>
-                <tr><td><code>/api/v1/crt/status/{symbol}</code></td><td>GET</td><td>CRT-Status fur ein Symbol</td></tr>
+                <tr><td><code>/api/v1/crt/status/{symbol}</code></td><td>GET</td><td>CRT-Status für ein Symbol</td></tr>
                 <tr><td><code>/api/v1/crt/signal/{symbol}</code></td><td>GET</td><td>Aktives CRT-Signal abrufen</td></tr>
             </table>
 
@@ -919,9 +919,9 @@
             <h3>Analysis & Scan</h3>
             <table class="endpoint-table">
                 <tr><th>Endpoint</th><th>Methode</th><th>Beschreibung</th></tr>
-                <tr><td><code>/api/v1/crt/analyze</code></td><td>POST</td><td>Vollstandige CRT-Analyse mit Service-Integration</td></tr>
-                <tr><td><code>/api/v1/crt/scan</code></td><td>GET</td><td>Scan nach CRT-Signalen uber mehrere Symbole</td></tr>
-                <tr><td><code>/api/v1/crt/price/update</code></td><td>POST</td><td>Preis-Update fur State Machine</td></tr>
+                <tr><td><code>/api/v1/crt/analyze</code></td><td>POST</td><td>Vollständige CRT-Analyse mit Service-Integration</td></tr>
+                <tr><td><code>/api/v1/crt/scan</code></td><td>GET</td><td>Scan nach CRT-Signalen über mehrere Symbole</td></tr>
+                <tr><td><code>/api/v1/crt/price/update</code></td><td>POST</td><td>Preis-Update für State Machine</td></tr>
                 <tr><td><code>/api/v1/crt/config</code></td><td>GET</td><td>CRT-Konfiguration</td></tr>
             </table>
 
@@ -929,15 +929,15 @@
             <div class="feature-grid">
                 <div class="feature-item">
                     <h4>&#127749; 1 AM EST</h4>
-                    <p>London Pre-Market - Asiatische Liquiditat wird aufgenommen</p>
+                    <p>London Pre-Market - Asiatische Liquidität wird aufgenommen</p>
                 </div>
                 <div class="feature-item">
                     <h4>&#127758; 5 AM EST</h4>
-                    <p>London Open - Europaische Session beginnt</p>
+                    <p>London Open - Europäische Session beginnt</p>
                 </div>
                 <div class="feature-item">
                     <h4>&#127961; 9 AM EST</h4>
-                    <p>New York Open - US-Markt offnet</p>
+                    <p>New York Open - US-Markt öffnet</p>
                 </div>
             </div>
         </div>
