feat(service-docs): add TCN-Training Service documentation page

--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -1482,6 +1482,7 @@
                     <div class="service-resource net"><span class="value">LOW</span><span class="label">Priority</span></div>
                 </div>
                 <div class="service-links">
+                    <a href="/service-tcn-train.html" target="_blank">Info</a>
                     <a href="/tcn-train/docs" target="_blank" style="background: linear-gradient(135deg, rgba(249, 115, 22, 0.3), rgba(249, 115, 22, 0.15)); color: #fb923c;">API Docs</a>
                     <a href="/tcn-train/api/v1/models" target="_blank">Models</a>
                 </div>
