--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -1321,6 +1321,7 @@
                     <a href="/service-candlestick.html" target="_blank">Info</a>
                     <a href="/candlestick/docs" target="_blank">API Docs</a>
                     <a href="/candlestick/api/v1/patterns" target="_blank">Patterns</a>
+                    <a href="/config-candlestick.html" target="_blank" style="background: linear-gradient(135deg, rgba(156, 39, 176, 0.3), rgba(156, 39, 176, 0.15)); color: #ce93d8;">Config</a>
                 </div>
             </div>
 
